--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: crrsa_mob_app
+name: crrsa_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -29,6 +29,11 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.3
   dio: ^5.4.4
+  url_launcher: ^6.3.0
+  path_provider: ^2.1.4
+  pdfx: ^2.6.0
+  jose: ^0.3.3
+  archive: ^3.6.1
 
 dev_dependencies:
   flutter_test:
